wip.html changes

--- a/client/wip.html
+++ b/client/wip.html
@@ -13,7 +13,7 @@
                 <img src="../src/media-files/game_banner.png">
                 <div style="font-weight: 600; text-align: center;">
                     <div>Oops! This project is currently still under development.</div>
-                    <div>Regardless, if you want to look at the current progress: <a href="/test">click here</a></div>
+                    <div>Regardless of this, you can look at the current progress here: <a href="/test">click here</a></div>
                 </div>
             </div>
         </div>
