setting up drone upgrading

--- a/client/index.html
+++ b/client/index.html
@@ -198,7 +198,20 @@
                         <span>BACK</span>
                     </div>
                 </div>
-                <div id="drone-view-upgrade-menu"></div>
+                <div id="drone-view-upgrade-menu">
+                    <div id="drone-view-upgrade-name"></div>
+                    <div id="drone-view-upgrade-image"></div>
+                    <div id="drone-view-upgrade-right-display"></div>
+                    <div class="shape-view-upgrade-bottom">
+                        <div id="drone-view-upgrade-button-2" class="shape-view-bottom-button-style">
+                            <div id="drone-view-upgrade-text">UPGRADE</div>
+                            <div style="display: flex; align-items: center; justify-content: center;">
+                                <div id="drone-view-upgrade-money-icon"></div>
+                                <span id="drone-view-upgrade-money-display">80,000,000</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div id="drone-ability-info-menu">
                 <div id="drone-ability-info-back-button">
