drone upgrading bar display

--- a/client/index.html
+++ b/client/index.html
@@ -199,6 +199,11 @@
                     </div>
                 </div>
                 <div id="drone-view-upgrade-menu">
+                    <div id="drone-view-upgrade-back-button">
+                        <span class="material-symbols-outlined">
+                            close
+                        </span>
+                    </div>
                     <div id="drone-view-upgrade-name"></div>
                     <div id="drone-view-upgrade-image"></div>
                     <div id="drone-view-upgrade-right-display"></div>
