--- a/client/index.html
+++ b/client/index.html
@@ -229,6 +229,7 @@
                 <div id="drone-ability-info-image"></div>
                 <div id="drone-ability-info-right-display"></div>
             </div>
+            <div id="pilotViewUI"></div>
             <div id="darkFadeTransition"></div>
         </div>
         <canvas id="gameCanvas"></canvas>
