added most of the html elements for pilots

--- a/client/index.html
+++ b/client/index.html
@@ -229,7 +229,30 @@
                 <div id="drone-ability-info-image"></div>
                 <div id="drone-ability-info-right-display"></div>
             </div>
-            <div id="pilotViewUI"></div>
+            <div id="pilotViewUI">
+                <div id="pilot-display-name">Harold</div>
+                <div id="pilot-display-image"></div>
+                <div id="pilot-right-side-display"></div>
+                <div class="pilot-view-bottom-display">
+                    <div id="pilot-view-equip-button" class="shape-view-bottom-button-style">EQUIP</div>
+                    <div id="pilot-view-unequip-button" class="shape-view-bottom-button-style">UNEQUIP</div>
+                    <div id="pilot-view-change-button" class="shape-view-bottom-button-style">CHANGE<br>PILOT</div>
+                    <div id="pilot-view-upgrade-button" class="shape-view-bottom-button-style">UPGRADE</div>
+                    <div id="pilot-view-buy-button" class="shape-view-bottom-button-style">
+                        <div>BUY</div>
+                        <div style="display: flex; align-items: center; justify-content: center;">
+                            <div id="pilot-view-buy-money-icon"></div>
+                            <span id="pilot-view-buy-money-display">80,000,000</span>
+                        </div>
+                    </div>
+                    <div id="pilot-view-back-button" class="pilot-view-bottom-button-style">
+                        <span class="material-symbols-outlined">
+                            arrow_back
+                        </span>
+                        <span>BACK</span>
+                    </div>
+                </div>
+            </div>
             <div id="darkFadeTransition"></div>
         </div>
         <canvas id="gameCanvas"></canvas>
