--- a/client/index.html
+++ b/client/index.html
@@ -232,14 +232,34 @@
             <div id="pilotViewUI">
                 <div id="pilot-display-name">Harold</div>
                 <div id="pilot-display-image"></div>
-                <div id="pilot-right-side-display"></div>
+                <div id="pilot-right-side-display">
+                    <div class="pilot-display-skill-header">
+                        <span style="margin-left: 4px; font-size: 50px; color: #5fbdf3;" class="material-symbols-outlined">
+                            info
+                        </span>
+                        <div class="pilot-display-header-data">
+                            <div class="pilot-operates-display">
+                                <div id="pilot-operates-header">Operates:</div>
+                                <div id="pilot-header-display-level">1</div>
+                                <div id="pilot-header-display-name">Raptor MK3</div>
+                            </div>
+                            <div class="pilot-active-skills-display">
+                                Active skill:&nbsp;
+                                <div id="pilot-skill-header-active-skills">-99</div>
+                                /
+                                <div id="pilot-skill-header-max-skills">10</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="pilot-story-display"></div>
+                </div>
                 <div class="pilot-view-bottom-display">
                     <div id="pilot-view-equip-button" class="shape-view-bottom-button-style">EQUIP</div>
                     <div id="pilot-view-unequip-button" class="shape-view-bottom-button-style">UNEQUIP</div>
                     <div id="pilot-view-change-button" class="shape-view-bottom-button-style">CHANGE<br>PILOT</div>
-                    <div id="pilot-view-upgrade-button" class="shape-view-bottom-button-style">UPGRADE</div>
+                    <div id="pilot-view-upgrade-button" class="shape-view-bottom-button-style">PROMOTE</div>
                     <div id="pilot-view-buy-button" class="shape-view-bottom-button-style">
-                        <div>BUY</div>
+                        <div>HIRE</div>
                         <div style="display: flex; align-items: center; justify-content: center;">
                             <div id="pilot-view-buy-money-icon"></div>
                             <span id="pilot-view-buy-money-display">80,000,000</span>
