skills display pt1 (pilots continued)

--- a/client/index.html
+++ b/client/index.html
@@ -251,6 +251,7 @@
                             </div>
                         </div>
                     </div>
+                    <div id="pilot-skills-display"></div>
                     <div id="pilot-story-display"></div>
                 </div>
                 <div class="pilot-view-bottom-display">
