pilots continued (again lol)

--- a/client/index.html
+++ b/client/index.html
@@ -244,7 +244,7 @@
                                 <div id="pilot-header-display-name">Raptor MK3</div>
                             </div>
                             <div class="pilot-active-skills-display">
-                                Active skill:&nbsp;
+                                Active skills:&nbsp;
                                 <div id="pilot-skill-header-active-skills">-99</div>
                                 /
                                 <div id="pilot-skill-header-max-skills">10</div>
@@ -255,10 +255,16 @@
                     <div id="pilot-story-display"></div>
                 </div>
                 <div class="pilot-view-bottom-display">
-                    <div id="pilot-view-equip-button" class="shape-view-bottom-button-style">EQUIP</div>
-                    <div id="pilot-view-unequip-button" class="shape-view-bottom-button-style">UNEQUIP</div>
+                    <div id="pilot-view-equip-button" class="shape-view-bottom-button-style">ASSIGN</div>
+                    <div id="pilot-view-unequip-button" class="shape-view-bottom-button-style">UNASSIGN</div>
                     <div id="pilot-view-change-button" class="shape-view-bottom-button-style">CHANGE<br>PILOT</div>
-                    <div id="pilot-view-upgrade-button" class="shape-view-bottom-button-style">PROMOTE</div>
+                    <div id="pilot-view-upgrade-button" class="shape-view-bottom-button-style">
+                        <div>PROMOTE</div>
+                        <div style="display: flex; align-items: center; justify-content: center;">
+                            <div id="pilot-view-upgrade-money-icon"></div>
+                            <span id="pilot-view-upgrade-money-display">80,000,000</span>
+                        </div>
+                    </div>
                     <div id="pilot-view-buy-button" class="shape-view-bottom-button-style">
                         <div>HIRE</div>
                         <div style="display: flex; align-items: center; justify-content: center;">
