error msg + starting to add skill training for pilots

--- a/client/index.html
+++ b/client/index.html
@@ -249,6 +249,9 @@
                                 /
                                 <div id="pilot-skill-header-max-skills">10</div>
                             </div>
+                            <div class="change-pilot-skill-holder">
+                                <div id="change-pilot-skill-button">CHANGE A SKILL</div>
+                            </div>
                         </div>
                     </div>
                     <div id="pilot-skills-display"></div>
