starting pilot skill changing

--- a/client/index.html
+++ b/client/index.html
@@ -283,6 +283,18 @@
                     </div>
                 </div>
             </div>
+            <div id="pilot-skill-change-ui">
+                <div id="pilot-skills-left-side-display"></div>
+                <div id="pilot-skills-right-side-display"></div>
+                <div class="pilot-view-bottom-display">
+                    <div id="pilot-skills-view-back-button" class="pilot-view-bottom-button-style">
+                        <span class="material-symbols-outlined">
+                            arrow_back
+                        </span>
+                        <span>BACK</span>
+                    </div>
+                </div>
+            </div>
             <div id="darkFadeTransition"></div>
         </div>
         <canvas id="gameCanvas"></canvas>
