the to battle button

--- a/client/index.html
+++ b/client/index.html
@@ -17,6 +17,7 @@
                 <div id="loadingText">Loading</div>
             </div>
             <div id="hangerUI"></div>
+            <div id="toBattleButton">To Battle</div>
             <div id="moneyDisplayHolder"></div>
             <div id="shapeViewUI">
                 <div id="imageView"></div>
