starting actual gameplay

--- a/client/index.html
+++ b/client/index.html
@@ -17,7 +17,9 @@
                 <div id="loadingText">Loading</div>
             </div>
             <div id="hangerUI"></div>
-            <div id="toBattleButton">To Battle</div>
+            <div id="hangerButtonsUI" style="display: none;">
+                <div id="toBattleButton">To Battle</div>
+            </div>
             <div id="moneyDisplayHolder"></div>
             <div id="shapeViewUI">
                 <div id="imageView"></div>
@@ -298,6 +300,7 @@
             </div>
             <div id="darkFadeTransition"></div>
         </div>
+        <div id="gameUI"></div>
         <canvas id="gameCanvas"></canvas>
     </body>
 </html>
