--- a/client/index.html
+++ b/client/index.html
@@ -300,7 +300,9 @@
             </div>
             <div id="darkFadeTransition"></div>
         </div>
-        <div id="gameUI"></div>
+        <div id="gameUI">
+            <div id="chooseShapeUI"></div>
+        </div>
         <canvas id="gameCanvas"></canvas>
     </body>
 </html>
