--- a/client/index.html
+++ b/client/index.html
@@ -301,6 +301,11 @@
             <div id="darkFadeTransition"></div>
         </div>
         <div id="gameUI">
+            <div id="inGameUI">
+                <div id="healthHolder">
+                    <div id="healthBar"></div>
+                </div>
+            </div>
             <div id="chooseShapeUI"></div>
         </div>
         <canvas id="gameCanvas"></canvas>
