--- a/client/index.html
+++ b/client/index.html
@@ -303,7 +303,9 @@
         <div id="gameUI">
             <div id="inGameUI">
                 <div id="healthHolder">
+                    <div id="grayDamageBar"></div>
                     <div id="healthBar"></div>
+                    <div id="healthText">100 000</div>
                 </div>
             </div>
             <div id="chooseShapeUI"></div>
