--- a/client/index.html
+++ b/client/index.html
@@ -307,6 +307,8 @@
                     <div id="healthBar"></div>
                     <div id="healthText">100 000</div>
                 </div>
+                <div id="weaponsDisplay"></div>
+                <div id="pingDisplay"></div>
             </div>
             <div id="chooseShapeUI"></div>
         </div>
