--- a/client/index.html
+++ b/client/index.html
@@ -310,6 +310,7 @@
                 <div id="weaponsDisplay"></div>
                 <div id="pingDisplay"></div>
             </div>
+            <canvas id="selectorMiniMap" width="450" height="450"></canvas>
             <div id="chooseShapeUI"></div>
         </div>
         <canvas id="gameCanvas"></canvas>
