--- a/client/index.html
+++ b/client/index.html
@@ -302,6 +302,14 @@
         </div>
         <div id="gameUI">
             <div id="inGameUI">
+                <div class="topHolder">
+                    <div id="cooldownTimer">5:00</div>
+                    <div style="display: flex; align-items: center; justify-content: center; width: 100%;">
+                        <div id="allyBeaconProgress" class="progressBar" style="margin-right: 10px;"></div>
+                        <div id="beaconDisplay"></div>
+                        <div id="enemyBeaconProgress" class="progressBar" style="margin-left: 10px;"></div>
+                    </div>
+                </div>
                 <div id="healthHolder">
                     <div id="grayDamageBar"></div>
                     <div id="healthBar"></div>
