stuff + buffed all shape speds

--- a/client/index.html
+++ b/client/index.html
@@ -309,6 +309,10 @@
                         <div id="beaconDisplay"></div>
                         <div id="enemyBeaconProgress" class="progressBar" style="margin-left: 10px;"></div>
                     </div>
+                    <div style="display: flex; align-items: center; justify-content: center; width: 100%; margin-top: 4px;">
+                        <div id="allyAliveDisplay" style="margin-right: 2px;"></div>
+                        <div id="enemyAliveDisplay" style="margin-left: 2px;"></div>
+                    </div>
                 </div>
                 <div id="healthHolder">
                     <div id="grayDamageBar"></div>
