--- a/client/index.html
+++ b/client/index.html
@@ -313,6 +313,11 @@
                         <div id="enemyAliveDisplay" style="margin-left: 2px;"></div>
                     </div>
                 </div>
+                <div id="menuButton">
+                    <span class="material-symbols-outlined">
+                        menu
+                    </span>
+                </div>
                 <div id="healthHolder">
                     <div id="grayDamageBar"></div>
                     <div id="healthBar"></div>
