--- a/client/index.html
+++ b/client/index.html
@@ -1,11 +1,11 @@
-<html>
+<html lang="en">
     <head>
         <title>Shape War: Remastered</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:wght@500&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,600,0,0">
-        <link rel="icon" type="favicon/x-icon" href="../src/media-files/favicon.png">
+        <link rel="icon" type="image/x-icon" href="../src/media-files/favicon.png">
         <link href="./main.css" rel="stylesheet">
         <script type="module" src="./script.js"></script>
     </head>
@@ -299,6 +299,7 @@
             </div>
             <div id="darkFadeTransition"></div>
         </div>
+
         <div id="gameUI">
             <div id="inGameUI">
                 <div class="topHolder">
@@ -328,6 +329,7 @@
             </div>
             <div id="chooseShapeUI"></div>
         </div>
+
         <canvas id="gameCanvas"></canvas>
     </body>
 </html>
