--- a/client/index.html
+++ b/client/index.html
@@ -314,6 +314,9 @@
                         <div id="enemyAliveDisplay" style="margin-left: 2px;"></div>
                     </div>
                 </div>
+                <div id="beaconCaptured">
+                    BEACON A CAPTURED
+                </div>
                 <div id="menuButton">
                     <span class="material-symbols-outlined">
                         menu
