--- a/client/index.html
+++ b/client/index.html
@@ -314,8 +314,13 @@
                         <div id="enemyAliveDisplay" style="margin-left: 2px;"></div>
                     </div>
                 </div>
-                <div id="beaconCaptured">
-                    BEACON A CAPTURED
+                <div class="announcement-in-game-header">
+                    <div id="beaconCaptured">
+                        BEACON A CAPTURED
+                    </div>
+                    <div id="killsAnnouncement">
+                        KILL X15
+                    </div>
                 </div>
                 <div id="menuButton">
                     <span class="material-symbols-outlined">
