--- a/client/index.html
+++ b/client/index.html
@@ -335,6 +335,10 @@
                 <div id="weaponsDisplay"></div>
                 <div id="pingDisplay"></div>
             </div>
+            <div id="gameResults">
+                <div id="gameResultDisplay">
+                </div>
+            </div>
             <div id="chooseShapeUI"></div>
         </div>
 
