starting the table thing

--- a/client/index.html
+++ b/client/index.html
@@ -338,6 +338,8 @@
             <div id="gameResults">
                 <div id="gameResultDisplay">
                 </div>
+                <div id="gameResultOverview">
+                </div>
             </div>
             <div id="chooseShapeUI"></div>
         </div>
