--- a/client/index.html
+++ b/client/index.html
@@ -339,6 +339,87 @@
                 <div id="gameResultDisplay">
                 </div>
                 <div id="gameResultOverview">
+                    <div style="display: flex; width: 100%;">
+                        <table class="result-board" style="border-color: var(--ally-table-border-color)">
+                            <thead style="background-color: rgb(0, 0, 255);">
+                                <tr>
+                                    <td class="table-name-header">
+                                        <div style="margin-left: 10px;">ALLIES</div>
+                                    </td>
+                                    <td class="table-stat-header">
+                                        <div class="table-center-icon">
+                                            <span class="material-symbols-outlined">
+                                                military_tech
+                                            </span>
+                                        </div>
+                                    </td>
+                                    <td class="table-damage-header">
+                                        <div class="table-center-icon">
+                                            <span class="material-symbols-outlined">
+                                                destruction
+                                            </span>
+                                        </div>
+                                    </td>
+                                    <td class="table-stat-header">
+                                        <div class="table-center-icon">
+                                            <span class="material-symbols-outlined">
+                                                group_remove
+                                            </span>
+                                        </div>
+                                    </td>
+                                    <td class="table-stat-header">
+                                        <div class="table-center-icon">
+                                            <span class="material-symbols-outlined">
+                                                hub
+                                            </span>
+                                        </div>
+                                    </td>
+                                </tr>
+                            </thead>
+                            <tbody id="ally-table-body">
+                            </tbody>
+                        </table>
+                
+                        <table class="result-board" style="margin-left: 10px; border-color: var(--enemy-table-border-color)">
+                            <thead style="background-color: rgb(255, 0, 0);">
+                                <tr>
+                                    <td class="table-name-header">
+                                        <div style="margin-left: 10px;">ENEMY TEAM</div>
+                                    </td>
+                                    <td class="table-stat-header">
+                                        <div class="table-center-icon">
+                                            <span class="material-symbols-outlined">
+                                                military_tech
+                                            </span>
+                                        </div>
+                                    </td>
+                                    <td class="table-damage-header">
+                                        <div class="table-center-icon">
+                                            <span class="material-symbols-outlined">
+                                                destruction
+                                            </span>
+                                        </div>
+                                    </td>
+                                    <td class="table-stat-header">
+                                        <div class="table-center-icon">
+                                            <span class="material-symbols-outlined">
+                                                group_remove
+                                            </span>
+                                        </div>
+                                    </td>
+                                    <td class="table-stat-header">
+                                        <div class="table-center-icon">
+                                            <span class="material-symbols-outlined">
+                                                hub
+                                            </span>
+                                        </div>
+                                    </td>
+                                </tr>
+                            </thead>
+                            <tbody id="enemy-table-body">
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
             <div id="chooseShapeUI"></div>
