--- a/client/index.html
+++ b/client/index.html
@@ -339,6 +339,7 @@
                 <div id="gameResultDisplay">
                 </div>
                 <div id="gameResultOverview">
+                    <div class="game-result-title">TEAM RESULTS</div>
                     <div style="display: flex; width: 100%;">
                         <table class="result-board" style="border-color: var(--ally-table-border-color)">
                             <thead style="background-color: rgb(0, 0, 255);">
@@ -419,6 +420,46 @@
                             <tbody id="enemy-table-body">
                             </tbody>
                         </table>
+                    </div>
+                    <div class="game-result-title">YOUR RESULTS</div>
+                    <div class="game-table-grid">
+                        <div class="grid-table-item">
+                            <span class="table-grid-item-icon material-symbols-outlined">
+                                destruction
+                            </span>
+                            <div class="grid-table-item-stat">
+                                <div id="grid-table-item-stat-damage" style="font-size: 22px;">1,233</div>
+                                <div class="grid-table-item-stat-description">Damage Dealt</div>
+                            </div>
+                        </div>
+                        <div class="grid-table-item">
+                            <span class="table-grid-item-icon material-symbols-outlined">
+                                group_remove
+                            </span>
+                            <div class="grid-table-item-stat">
+                                <div id="grid-table-item-stat-kills" style="font-size: 22px;">1,233</div>
+                                <div class="grid-table-item-stat-description">Kills</div>
+                            </div>
+                        </div>
+                        <div class="grid-table-item">
+                            <span class="table-grid-item-icon material-symbols-outlined">
+                                hub
+                            </span>
+                            <div class="grid-table-item-stat">
+                                <div id="grid-table-item-stat-beacons" style="font-size: 22px;">1,233</div>
+                                <div class="grid-table-item-stat-description">Beacons</div>
+                            </div>
+                        </div>
+                        <div class="grid-table-item">
+                            <span class="table-grid-item-icon material-symbols-outlined">
+                                military_tech
+                            </span>
+                            <div class="grid-table-item-stat">
+                                <div id="grid-table-item-stat-honor" style="font-size: 22px;">1,233</div>
+                                <div class="grid-table-item-stat-description">Honor</div>
+                            </div>
+                            <div id="grid-table-item-honor-info">i</div>
+                        </div>
                     </div>
                 </div>
             </div>
