reward calulations" clear

--- a/client/index.html
+++ b/client/index.html
@@ -461,6 +461,38 @@
                             <div id="grid-table-item-honor-info">i</div>
                         </div>
                     </div>
+                    <div class="game-table-grid" style="margin-top: 7px; margin-bottom: 30px;">
+                        <div class="grid-table-item">
+                            <span class="table-grid-item-reward-icon" style="background-image: url('../src/media-files/money/silver.png');"></span>
+                            <div class="grid-table-item-stat">
+                                <div id="grid-table-item-reward-silver" style="font-size: 22px;">1,233</div>
+                                <div class="grid-table-item-stat-description">Silver Reward</div>
+                            </div>
+                        </div>
+                        <div class="grid-table-item">
+                            <span class="table-grid-item-reward-icon" style="background-image: url('../src/media-files/money/gold.png');"></span>
+                            <div class="grid-table-item-stat">
+                                <div id="grid-table-item-reward-gold" style="font-size: 22px;">1,233</div>
+                                <div class="grid-table-item-stat-description">Gold Reward</div>
+                            </div>
+                        </div>
+                        <div class="grid-table-item">
+                            <span class="table-grid-item-reward-icon" style="background-image: url('../src/media-files/money/keys.png');"></span>
+                            <div class="grid-table-item-stat">
+                                <div id="grid-table-item-reward-keys" style="font-size: 22px;">1,233</div>
+                                <div class="grid-table-item-stat-description">Keys Reward</div>
+                            </div>
+                        </div>
+                        <div class="grid-table-item">
+                            <span class="table-grid-item-icon material-symbols-outlined" style="color: #ffff00;">
+                                trophy
+                            </span>
+                            <div class="grid-table-item-stat">
+                                <div id="grid-table-item-reward-league" style="font-size: 22px;">1,233</div>
+                                <div class="grid-table-item-stat-description">League Reward</div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div id="chooseShapeUI"></div>
