--- a/client/index.html
+++ b/client/index.html
@@ -493,6 +493,7 @@
                             </div>
                         </div>
                     </div>
+                    <div id="game-screen-exit-button">OK</div>
                 </div>
             </div>
             <div id="chooseShapeUI"></div>
