--- a/client/index.html
+++ b/client/index.html
@@ -302,6 +302,7 @@
 
         <div id="gameUI">
             <div id="inGameUI">
+                <div id="easy-mode-display">EASY MODE: ON</div>
                 <div class="topHolder">
                     <div id="cooldownTimer">5:00</div>
                     <div style="display: flex; align-items: center; justify-content: center; width: 100%;">
