--- a/client/index.html
+++ b/client/index.html
@@ -328,10 +328,14 @@
                         menu
                     </span>
                 </div>
-                <div id="healthHolder">
-                    <div id="grayDamageBar"></div>
-                    <div id="healthBar"></div>
-                    <div id="healthText">100 000</div>
+                <div id="bottom-holder-game">
+                    <div id="healthHolder">
+                        <div id="grayDamageBar"></div>
+                        <div id="healthBar"></div>
+                        <div id="healthText">100 000</div>
+                    </div>
+
+                    <canvas id="ability-1-display" width="47" height="47"></canvas>
                 </div>
                 <div id="weaponsDisplay"></div>
                 <div id="pingDisplay"></div>
