--- a/client/index.html
+++ b/client/index.html
@@ -345,6 +345,7 @@
                 </div>
 
                 <canvas id="ability-1-display" width="47" height="47"></canvas>
+                <canvas id="active-module-display" width="47" height="47"></canvas>
             </div>
             <div id="weaponsDisplay"></div>
             <div id="pingDisplay"></div>
