--- a/client/index.html
+++ b/client/index.html
@@ -23,6 +23,11 @@
         <div id="hangerUI"></div>
         <div id="hangerButtonsUI" style="display: none;">
             <div id="toBattleButton">To Battle</div>
+            <div id="taskButton">
+                <span class="material-symbols-outlined">
+                    task_alt
+                </span>
+            </div>
         </div>
         <div id="moneyDisplayHolder"></div>
         <div id="shapeViewUI">
