task button styles

--- a/client/index.html
+++ b/client/index.html
@@ -24,7 +24,7 @@
         <div id="hangerButtonsUI" style="display: none;">
             <div id="toBattleButton">To Battle</div>
             <div id="taskButton">
-                <span class="material-symbols-outlined">
+                <span class="material-symbols-outlined" style="font-size: 64px;">
                     task_alt
                 </span>
             </div>
