--- a/client/index.html
+++ b/client/index.html
@@ -307,6 +307,7 @@
                 </div>
             </div>
         </div>
+        <div id="task-display"></div>
         <div id="darkFadeTransition"></div>
     </div>
 
