--- a/client/index.html
+++ b/client/index.html
@@ -22,8 +22,13 @@
         </div>
         <div id="hangerUI"></div>
         <div id="hangerButtonsUI" style="display: none;">
+            <div id="settingsButton" class="hanger-button">
+                <span class="material-symbols-outlined" style="font-size: 64px;">
+                    settings
+                </span>
+            </div>
             <div id="toBattleButton">To Battle</div>
-            <div id="taskButton">
+            <div id="taskButton" class="hanger-button">
                 <span class="material-symbols-outlined" style="font-size: 64px;">
                     task_alt
                 </span>
