back button styles

--- a/client/index.html
+++ b/client/index.html
@@ -312,7 +312,14 @@
                 </div>
             </div>
         </div>
-        <div id="task-display"></div>
+        <div id="task-display">
+            <div id="task-view-back-button" class="shape-view-bottom-button-style">
+                <span class="material-symbols-outlined">
+                    arrow_back
+                </span>
+                <span>BACK</span>
+            </div>
+        </div>
         <div id="darkFadeTransition"></div>
     </div>
 
