--- a/client/index.html
+++ b/client/index.html
@@ -313,11 +313,14 @@
             </div>
         </div>
         <div id="task-display">
-            <div id="task-view-back-button" class="shape-view-bottom-button-style">
-                <span class="material-symbols-outlined">
-                    arrow_back
-                </span>
-                <span>BACK</span>
+            <div id="task-view-display"></div>
+            <div class="shape-view-bottom-display">
+                <div id="task-view-back-button" class="shape-view-bottom-button-style">
+                    <span class="material-symbols-outlined">
+                        arrow_back
+                    </span>
+                    <span>BACK</span>
+                </div>
             </div>
         </div>
         <div id="darkFadeTransition"></div>
