--- a/client/index.html
+++ b/client/index.html
@@ -21,19 +21,35 @@
             <div id="loadingText">Loading</div>
         </div>
         <div id="hangerUI"></div>
+
         <div id="hangerButtonsUI" style="display: none;">
             <div id="settingsButton" class="hanger-button">
                 <span class="material-symbols-outlined" style="font-size: 64px;">
                     settings
                 </span>
             </div>
+
+            <div id="operationButton" class="hanger-button">
+                <span class="material-symbols-outlined" style="font-size: 64px;">
+                    trophy
+                </span>
+            </div>
+
             <div id="toBattleButton">To Battle</div>
+
             <div id="taskButton" class="hanger-button">
                 <span class="material-symbols-outlined" style="font-size: 64px;">
                     task_alt
                 </span>
             </div>
+
+            <div id="lootboxButton" class="hanger-button">
+                <span class="material-symbols-outlined" style="font-size: 64px;">
+                    money_bag
+                </span>
+            </div>
         </div>
+
         <div id="moneyDisplayHolder"></div>
         <div id="shapeViewUI">
             <div id="imageView"></div>
