lootbox ui stuff

--- a/client/index.html
+++ b/client/index.html
@@ -339,6 +339,16 @@
                 </div>
             </div>
         </div>
+        <div id="lootbox-display">
+            <div class="task-view-bottom-display">
+                <div id="task-view-back-button" class="shape-view-bottom-button-style">
+                    <span class="material-symbols-outlined">
+                        arrow_back
+                    </span>
+                    <span>BACK</span>
+                </div>
+            </div>
+        </div>
         <div id="darkFadeTransition"></div>
     </div>
 
